# llm-classifier

./: README.md  __init__.py  cli.py  evaluator.py  parser.py  pyproject.toml  setup.py
llm_classifier/: cli.py  core.py  evaluator.py  parser.py
